@startuml
title C4 Class Diagram: Verschillende boekingsservices integreren


package "backend" {

interface IBookingAdapter {
    + searchHotels(String location, String checkInDate, String CheckOutDate): Hotel[]
}

class BookingComAdapter {
    + searchHotels(String location, String checkInDate, String CheckOutDate): Hotel[]
}

class TripadvisorAdapter {
    + searchHotels(String location, String checkInDate, String CheckOutDate): Hotel[]
}

class BookingController {
    + searchHotels(String location, String checkInDate, String CheckOutDate): Hotel[]
}

class BookingService {
    + searchHotels(String location, String checkInDate, String CheckOutDate): Hotel[]
}

class Hotel {
    - String name
    - String location
    - String checkInDate
    - String checkOutDate
}

}

IBookingAdapter <|.. BookingComAdapter
IBookingAdapter <|.. TripadvisorAdapter
BookingComAdapter --> "bookingComAPI 1" "BookingCom API"
TripadvisorAdapter --> "tripAdvisorAPI 1" "Tripadvisor API"

BookingController --> "bookingService 1" BookingService
BookingService --> "iBookingAdapter *" IBookingAdapter
@enduml
